# rossmann-store-sales

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
api/: handler.py
api/rossmann/: Rossmann.py
notebooks/: c0.1-sg-data-description.ipynb  c0.2-sg-feature-engineering.ipynb
