[tool.poetry]
name = "rossmann-stores-sales"
version = "0.1.0"
description = ""
authors = ["sindolfoGomes <sindolfogomes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
jupyter = "^1.0.0"
inflection = "^0.5.1"
numpy = "^1.23.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
ipython = "^8.4.0"
sklearn = "^0.0"
Boruta = "^0.3"
xgboost = "^1.6.1"
Flask = "^2.1.3"
requests = "^2.28.1"
uWSGI = "^2.0.20"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
